Fix pipeline